--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   fluttertoast: ^2.0.3
   after_layout: 1.0.2
   pull_to_refresh: ^1.1.0
+  sembast: ^1.8.0
 
 dev_dependencies:
   flutter_test:
