--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,10 @@ dependencies:
   sembast: ^1.8.0
   barcode_scan: ^0.0.4
   image_picker: ^0.4.1
-  dio: ^0.0.14
+  cached_network_image: ^0.4.1
+  dio:
+    path: ../dio
+  image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
