--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,9 @@ dependencies:
   barcode_scan: ^0.0.4
   image_picker: ^0.4.1
   cached_network_image: ^0.4.1
-  dio:
-    path: ../dio
+  dio: ^0.0.14
   image: ^2.0.0
+  http: ^0.11.3+16
 
 dev_dependencies:
   flutter_test:
