--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   image: ^2.0.4
   http: ^0.11.3+16
   android_alarm_manager: ^0.1.1
-
+  flutter_native_image:
+    git: https://github.com/btastic/flutter_native_image.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
