工单列表优化

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ flutter:
   - assets/images/task_detail_task.png
   - assets/images/task_detail_person.png
   - assets/images/scan.png
+  - assets/images/order_ing.png
+  - assets/images/order_done.png
+  - assets/images/order_daiyanshou.png
+  - assets/images/order_pizhun.png
+  - assets/images/order_daipizhun.png
 
   #  - images/a_dot_ham.jpeg
 
