--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,9 @@ dependencies:
     path: ../flutter_barcode_reader
   image_picker: 0.4.5
   cached_network_image: ^0.4.1
-  dio: ^0.1.3
+  dio: ^0.1.7
   image: ^2.0.4
-  http: ^0.11.3+16
+#  http: ^0.11.3+16
   android_alarm_manager: ^0.1.1
 #  flutter_native_image:
 #    git: https://github.com/btastic/flutter_native_image.git
