--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   fluttertoast: ^2.0.7
   after_layout: 1.0.2
   sembast: ^1.8.0
+  connectivity: 0.3.1
+
 #  barcode_scan: ^0.0.4
   barcode_scan:
     path: ../flutter_barcode_reader
