--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,10 +24,10 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.hdkj.samexapp"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
-        versionName "1.2.6"
+        versionName "1.3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -57,4 +57,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.xdandroid:hellodaemon:+'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation "io.karn:notify:1.1.0"
+
 }
