--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="io.flutter.app.FlutterApplication"
-        android:label="移动工单"
+        android:name="com.hdkj.samexapp.SMApplication"
+        android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -38,9 +38,7 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name="io.flutter.plugins.androidalarmmanager.AlarmService"
-            android:exported="false"/>
+        <service android:name="com.hdkj.samexapp.AlarmService"/>
 
     </application>
 </manifest>
