--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,6 @@ dependencies:
   intl: ^0.15.5
   fluttertoast: ^2.0.7
   after_layout: 1.0.2
-  sembast: ^1.8.0
   connectivity: 0.3.1
 
 #  barcode_scan: ^0.0.4
@@ -28,7 +27,7 @@ dependencies:
     path: ../dio
   image: ^2.0.4
 #  http: ^0.11.3+16
-  android_alarm_manager: ^0.1.1
+#  android_alarm_manager: ^0.1.1
 #  flutter_native_image:
 #    git: https://github.com/btastic/flutter_native_image.git
 dev_dependencies:
