--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   fluttertoast: ^2.0.7
   after_layout: 1.0.2
   connectivity: 0.3.1
-  get_version: ^0.0.5
   open_file: ^1.0.7
+  package_info: ^0.3.2
 
 #  barcode_scan: ^0.0.4
   barcode_scan:
