任务箱个数显示

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   connectivity: 0.3.1
   open_file: ^1.0.7
   package_info: ^0.3.2
+  rxdart: ^0.18.1
 
 #  barcode_scan: ^0.0.4
   barcode_scan:
