--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   open_file: ^1.0.7
   package_info: ^0.3.2
   rxdart: ^0.18.1
+  event_bus: ^1.0.1
 
   barcode_scan:
     path: ../flutter_barcode_reader
