--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   image_picker: 0.4.10
   cached_network_image: 0.5.0+1
   image: 2.0.4
-  # flutter_boost: 0.0.415
-  barcode_scan:
-    path: ../Plugins/flutter_barcode_reader
+  flutter_boost: 0.0.415
+  barcode_scan: 0.0.8
+#    path: ../Plugins/flutter_barcode_reader
   dio:
     path: ../Plugins/dio
 
@@ -80,28 +80,6 @@ flutter:
         - asset: assets/fonts/miui.ttf
   #  - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.io/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.io/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.io/custom-fonts/#from-packages
+  module:
+    androidPackage: com.hddz.samex_module
+    iosBundleIdentifier: com.hddz.samex_module
