--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,8 +14,16 @@ if (flutterRoot == null) {
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+rootProject.allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
+
 android {
-    compileSdkVersion 27
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     lintOptions {
         disable 'InvalidPackage'
@@ -25,7 +33,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.hdkj.samexapp"
         minSdkVersion 19
-        targetSdkVersion 27
+//        targetSdkVersion 27
         versionCode 12
         versionName "1.5.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -61,4 +69,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation "io.karn:notify:1.1.0"
     implementation project(':hellodaemon')
+
+    implementation 'com.alibaba:fastjson:1.2.41'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
