--- a/android/hellodaemon/build.gradle
+++ b/android/hellodaemon/build.gradle
@@ -26,11 +26,11 @@ ext {
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "27.0.3"
+    buildToolsVersion "26.0.3"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 27
+        // targetSdkVersion 2
         versionCode 11
         versionName "1.2.2"
     }
