--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,4 @@
-def isLib = true
+def isLib = false
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
