--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   shared_preferences: 0.4.3
-  sqflite: 0.11.2+4
-  path_provider: 0.4.1
+  sqflite: ^1.1.0
+  path_provider: 1.3.1
   intl: 0.15.8
   fluttertoast: 2.1.1
   after_layout: 1.0.4
@@ -21,9 +21,9 @@ dependencies:
   rxdart: 0.18.1
   event_bus: 1.0.1
   image_picker: 0.4.12+1
-  cached_network_image: 0.5.1
+  cached_network_image: 1.1.2+1
   image: 2.0.4
-  flutter_boost: 0.0.417
+  flutter_boost: 0.1.50
   flutter_easyrefresh: 2.0.2
   barcode_scan: 0.0.8
     # path: ../Plugins/flutter_barcode_reader
