[update] dio to last version.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,10 @@ dependencies:
   image_picker: 0.4.12+1
   cached_network_image: 1.1.2+1
   image: 2.0.4
-  flutter_boost: 0.1.50
-  flutter_easyrefresh: 2.0.2
-  barcode_scan: 0.0.8
-    # path: ../Plugins/flutter_barcode_reader
-  dio:
-    path: ../Plugins/dio
+  flutter_boost: 0.0.420
+  flutter_easyrefresh: ^2.0.2
+  barcode_scan: ^1.0.0
+  dio: ^3.0.3
 
 dev_dependencies:
   flutter_test:
