--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  shared_preferences: 0.4.3
+  shared_preferences: 0.5.4
   sqflite: ^1.1.0
-  path_provider: 1.3.1
+  path_provider: 1.4.0
   intl: 0.15.8
-  fluttertoast: 2.1.1
-  after_layout: 1.0.4
-  connectivity: 0.3.2
-  open_file: 1.1.1
-  package_info: 0.3.2+1
-  rxdart: 0.18.1
-  event_bus: 1.0.1
-  image_picker: 0.4.12+1
+  fluttertoast: 3.1.3
+  after_layout: 1.0.7+2
+  connectivity: 0.4.5+1
+  open_file: 2.0.3
+  package_info: 0.4.0+9
+  rxdart: 0.22.4
+  event_bus: 1.1.0
+  image_picker: 0.6.1+8
   cached_network_image: 1.1.2+1
-  image: 2.0.4
+  image: 2.1.5
   # flutter_boost: 0.1.54
   flutter_boost:
     git:
@@ -30,7 +30,11 @@ dependencies:
       ref: 'feature/flutter_1.9_androidx_upgrade'
   flutter_easyrefresh: ^2.0.2
   barcode_scan: ^1.0.0
-  dio: ^3.0.3
+  # dio: 2.1.16
+  dio: 
+    git:
+      url: 'https://github.com/skiesme/dio.git'
+      ref: 'flutter'
 
 dev_dependencies:
   flutter_test:
