--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   flutter_boost:
     git:
       url: "https://github.com/alibaba/flutter_boost.git"
-      ref: "feature/flutter_1.9_androidx_upgrade"
+      ref: "1.9.1+1"
   flutter_easyrefresh: ^2.0.2
   barcode_scan: ^1.0.0
   # dio: 2.1.16
@@ -85,6 +85,6 @@ flutter:
       fonts:
         - asset: assets/fonts/miui.ttf
   #  - images/a_dot_ham.jpeg
-  # module:
-  #   androidPackage: com.hddz.samex_module
-  #   iosBundleIdentifier: com.hddz.samex_module
+  module:
+    androidPackage: com.hddz.samex_module
+    iosBundleIdentifier: com.hddz.samex_module
