--- a/android/app/src/main/module/AndroidManifest.xml
+++ b/android/app/src/main/module/AndroidManifest.xml
@@ -36,10 +36,10 @@
             <meta-data
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
                 android:value="true" />
-            <intent-filter>
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
         <service android:name="com.hdkj.samexapp.AlarmService"/>
