--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,12 +3,13 @@ buildscript {
 
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 
     dependencies {
+        classpath 'com.kezong:fat-aar:1.2.8'
         classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath 'com.kezong:fat-aar:1.1.7'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -16,8 +17,8 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        maven { url 'https://jitpack.io' }
     }
 }
 
