[chore] change maven url.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,6 @@ buildscript {
 
     repositories {
         google()
-        mavenCentral()
         jcenter()
     }
 
@@ -17,8 +16,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        mavenCentral()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
